feat: badminton session

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ VERSION= #type: string , Example: "1.0.0"
 
 # NETWORK
 PORT= # Type: number, Example: 3000
+DOAMIN= # Type: string, Example: "https://example.com"
 
 # DB
 DB_TYPE= # Type: string, Example: "postgres"
