--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -13,8 +13,8 @@ services:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_DATABASE}
     command: postgres -c 'config_file=/etc/postgresql/postgresql.conf'
-    ports:
-      - ${DB_PORT}:5432
+    # ports:
+    #   - ${DB_PORT}:5432
     volumes:
       - ./docker/db/postgres/data/:/var/lib/postgresql/data
       - ./docker/db/postgres/postgres.conf:/etc/postgresql/postgresql.conf
@@ -30,8 +30,8 @@ services:
     environment:
       REDIS_PASSWORD: ${REDIS_PASSWORD}
     command: redis-server --requirepass ${REDIS_PASSWORD}
-    ports:
-      - ${REDIS_PORT}:6379
+    # ports:
+    #   - ${REDIS_PORT}:6379
     volumes:
       - ./docker/db/redis/data/:/data
     env_file:
